{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 179,
  "lineage": "85724bdd-69a0-d9ea-cf11-cb0f642d6035",
  "resources": [
    {
      "module": "module.Devloper_env",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d2e2d99a673fca16",
            "arn": "arn:aws:ec2:us-east-1:801328421558:instance/i-0644885d11200856c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0644885d11200856c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "NVanupDelete",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-080f45675857a8b7f",
            "private_dns": "ip-3-19-112-68.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "3.19.112.68",
            "public_ip": "54.83.158.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0af39f3986ba908cd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfb43e96e9d4e60c",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-056655b806965baa5"
            ]
          },
          "dependencies": [
            "module.Devloper_env.aws_security_group.web_server",
            "module.Devloper_env_VPC.aws_subnet.prod-subnet-public-1",
            "module.Devloper_env_VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Devloper_env",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801328421558:security-group/sg-056655b806965baa5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056655b806965baa5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic on port 80 from everywhere",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic on port 80 from everywhere",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic on port 80 from everywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240215194448410500000002",
            "name_prefix": "terraform-",
            "owner_id": "801328421558",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra"
            },
            "tags_all": {
              "Name": "terra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc2f345c72814f1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Devloper_env_VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Devloper_env_VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801328421558:internet-gateway/igw-0510e9d9091d95b75",
            "id": "igw-0510e9d9091d95b75",
            "owner_id": "801328421558",
            "tags": {
              "Name": "terraform-ig"
            },
            "tags_all": {
              "Name": "terraform-ig"
            },
            "vpc_id": "vpc-0bc2f345c72814f1d"
          },
          "dependencies": [
            "module.Devloper_env_VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Devloper_env_VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801328421558:route-table/rtb-08f28fe3476f403fb",
            "id": "rtb-08f28fe3476f403fb",
            "owner_id": "801328421558",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0510e9d9091d95b75",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc2f345c72814f1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Devloper_env_VPC.aws_internet_gateway.internet_gateway",
            "module.Devloper_env_VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Devloper_env_VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0544a14373c2421",
            "route_table_id": "rtb-08f28fe3476f403fb",
            "subnet_id": "subnet-0bfb43e96e9d4e60c"
          },
          "dependencies": [
            "module.Devloper_env_VPC.aws_internet_gateway.internet_gateway",
            "module.Devloper_env_VPC.aws_route_table.public_route_table",
            "module.Devloper_env_VPC.aws_subnet.prod-subnet-public-1",
            "module.Devloper_env_VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Devloper_env_VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801328421558:subnet/subnet-0b11ea9e6051545ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "3.19.128.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b11ea9e6051545ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801328421558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bc2f345c72814f1d"
          },
          "dependencies": [
            "module.Devloper_env_VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Devloper_env_VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801328421558:subnet/subnet-0bfb43e96e9d4e60c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "3.19.0.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfb43e96e9d4e60c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801328421558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bc2f345c72814f1d"
          },
          "dependencies": [
            "module.Devloper_env_VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Devloper_env_VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801328421558:vpc/vpc-0bc2f345c72814f1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "3.19.0.0/16",
            "default_network_acl_id": "acl-075b1ded1ab7bb7e8",
            "default_route_table_id": "rtb-03ff8fc2561266e01",
            "default_security_group_id": "sg-01dd6eba805c1d1be",
            "dhcp_options_id": "dopt-09ec2538c08dcf244",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc2f345c72814f1d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03ff8fc2561266e01",
            "owner_id": "801328421558"
          }
        }
      ]
    }
  ]
}